# fapiaoshibie

./: .gitignore  LICENSE  README.md  app.js  index.html  pyproject.toml  styles.css
.github/workflows/: ci.yml
docs/: app.js  index.html  styles.css
examples/invoices/: flight-outbound.md  flight-return.md  meal.md
invoice_agent/: __init__.py  cli.py  extractors.py  models.py  parser.py  report.py  validator.py
